apps/base/bookorbit/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookorbit
  namespace: bookorbit
  labels:
    app: bookorbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookorbit
  template:
    metadata:
      labels:
        app: bookorbit
    spec:
      containers:
        - name: bookorbit
          image: ghcr.io/bookorbit/bookorbit:3.2.0
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "2000m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: books
              mountPath: /books
            - name: data
              mountPath: /data
      volumes:
        - name: books
          persistentVolumeClaim:
            claimName: bookorbit-library
        - name: data
          persistentVolumeClaim:
            claimName: bookorbit-data
