apps/base/bookorbit/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  namespace: bookorbit
spec:
  selector:
    app: bookorbit
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
